--- a/Resources/CSS/Style.css
+++ b/Resources/CSS/Style.css
@@ -1,16 +1,6 @@
-body {
-   margin: 0;
-   background-color: #424242;
-   font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.container {
-   color: #62ffa6;
-   height: 600px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-}
+/* body {
+   font: 1em ;
+} */
 
 .message {
    border: 1px solid #62ffa6;
@@ -25,6 +15,9 @@ body {
    text-align: center;
 }
 
+image{
+   image-rendering: ;
+}
 @media screen and (max-width:500px) {
    body{
       font-size: 1rem;
